test/conformance/kuttl/mutate/clusterpolicy/standard/basic-check-output/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-labels
status:
  ready: true
